--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -97,7 +97,7 @@ msgctxt "#31134"
 msgid "Use Fanart instead of Episode Thumbs for Billboard views"
 
 msgctxt "#31135"
-msgid "Use Thumbs 16:9 for Wall Landscape view"
+msgid "Enable 'Row Thumb (16:9)' and 'Wall Thumb (16:9)' views"
 
 msgctxt "#31136"
 msgid "Airs"
@@ -113,6 +113,12 @@ msgid "Row Thumb (16:9)"
 
 msgctxt "#31140"
 msgid "Wall Thumb (16:9)"
+
+msgctxt "#31141"
+msgid "Enable 'Wall Discart' view"
+
+
+
 
 #Conq labels
 
