--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -103,10 +103,10 @@ msgctxt "#31136"
 msgid "Airs"
 
 msgctxt "#31137"
-msgid "Watched"
+msgid "watched"
 
 msgctxt "#31138"
-msgid "Mins"
+msgid "mins"
 
 msgctxt "#31139"
 msgid "Row Thumb (16:9)"
@@ -116,6 +116,9 @@ msgid "Wall Thumb (16:9)"
 
 msgctxt "#31141"
 msgid "Enable 'Wall Discart' view"
+
+msgctxt "#31142"
+msgid "Art"
 
 
 
