--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -22,13 +22,13 @@ msgctxt "#31100"
 msgid "Background colour"
 
 msgctxt "#31101"
-msgid "Blue"
+msgid "Rule field"
 
 msgctxt "#31102"
-msgid "Clay"
+msgid "Rule operator"
 
 msgctxt "#31103"
-msgid "Fountain"
+msgid "Rule value"
 
 msgctxt "#31104"
 msgid "Haze"
