--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -159,6 +159,14 @@ msgctxt "#31152"
 msgid "Reset all"
 msgstr ""
 
+msgctxt "#31153"
+msgid "Auto-Update Off"
+msgstr ""
+
+msgctxt "#31154"
+msgid "Auto-Update On"
+msgstr ""
+
 
 
 
