--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -49,37 +49,37 @@ msgctxt "#31109"
 msgid "Update Library"
 
 msgctxt "#31110"
-msgid "Billboard"
+msgid "-"
 
 msgctxt "#31111"
-msgid "Billboard Info"
+msgid "-"
 
 msgctxt "#31112"
-msgid "Filmstrip Poster"
+msgid "-"
 
 msgctxt "#31113"
-msgid "Filmstrip Square"
+msgid "-"
 
 msgctxt "#31114"
-msgid "Row Poster"
+msgid "-"
 
 msgctxt "#31115"
-msgid "Row Square"
+msgid "-"
 
 msgctxt "#31116"
-msgid "Row Landscape"
+msgid "-"
 
 msgctxt "#31117"
-msgid "Wall Poster"
+msgid "-"
 
 msgctxt "#31118"
-msgid "Wall Square"
+msgid "-"
 
 msgctxt "#31119"
-msgid "Wall Landscape"
+msgid "-"
 
 msgctxt "#31120"
-msgid "Wall Discart"
+msgid "-"
 
 msgctxt "#31130"
 msgid "Last Aired"
@@ -109,10 +109,10 @@ msgctxt "#31138"
 msgid "mins"
 
 msgctxt "#31139"
-msgid "Row Thumb (16:9)"
+msgid "-"
 
 msgctxt "#31140"
-msgid "Wall Thumb (16:9)"
+msgid "-"
 
 msgctxt "#31141"
 msgid "Enable 'Wall Discart' view"
@@ -166,6 +166,45 @@ msgstr ""
 msgctxt "#31154"
 msgid "Auto-Update On"
 msgstr ""
+
+msgctxt "#31500"
+msgid "Billboard"
+
+msgctxt "#31501"
+msgid "Billboard Info"
+
+msgctxt "#31510"
+msgid "Filmstrip Poster"
+
+msgctxt "#31511"
+msgid "Filmstrip Square"
+
+msgctxt "#31520"
+msgid "Row Poster"
+
+msgctxt "#31521"
+msgid "Row Square"
+
+msgctxt "#31522"
+msgid "Row Landscape"
+
+msgctxt "#31523"
+msgid "Row Thumb (16:9)"
+
+msgctxt "#31530"
+msgid "Wall Poster"
+
+msgctxt "#31531"
+msgid "Wall Square"
+
+msgctxt "#31532"
+msgid "Wall Landscape"
+
+msgctxt "#31533"
+msgid "Wall Thumb (16:9)"
+
+msgctxt "#31534"
+msgid "Wall Discart"
 
 
 
