--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -49,13 +49,13 @@ msgctxt "#31109"
 msgid "Update Library"
 
 msgctxt "#31110"
-msgid "-"
+msgid "Views only"
 
 msgctxt "#31111"
-msgid "-"
+msgid "Info only"
 
 msgctxt "#31112"
-msgid "-"
+msgid "Views and Info"
 
 msgctxt "#31113"
 msgid "-"
@@ -88,7 +88,7 @@ msgctxt "#31131"
 msgid "Aired"
 
 msgctxt "#31132"
-msgid "Enable Clearlogos"
+msgid "Display Clearlogos"
 
 msgctxt "#31133"
 msgid "Enable Flags for Billboard views"
