--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -17,6 +17,14 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 # NEW LABELS
+
+msgctxt "#31067"
+msgid "Event log"
+msgstr ""
+
+
+
+
 msgctxt "#32000"
 msgid "Ends"
 
