--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -123,7 +123,7 @@ msgctxt "#31133"
 msgid "Enable Flags for Billboard views"
 
 msgctxt "#31134"
-msgid "Use Fanart instead of Episode Thumbs for Billboard views"
+msgid "Prefer keyart for poster views"
 
 msgctxt "#31135"
 msgid "Enable 'Row Thumb (16:9)' and 'Wall Thumb (16:9)' views"
