--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -16,14 +16,141 @@ msgstr ""
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# NEW LABELS
 
-msgctxt "#31067"
-msgid "Event log"
+
+
+
+msgctxt "#31200"
+msgid "Copacetic"
+msgstr ""
+
+msgctxt "#31201"
+msgid "List"
+msgstr ""
+
+msgctxt "#31202"
+msgid "Billboard"
+msgstr ""
+
+msgctxt "#31203"
+msgid "Showcase"
+msgstr ""
+
+msgctxt "#31204"
+msgid "Strip"
+msgstr ""
+
+msgctxt "#31205"
+msgid "Grid"
+msgstr ""
+
+msgctxt "#31206"
+msgid "Posters"
+msgstr ""
+
+msgctxt "#31207"
+msgid "Fanart"
+msgstr ""
+
+msgctxt "#31208"
+msgid "Square"
 msgstr ""
 
 
 
+
+
+msgctxt "#31209"
+msgid "Night"
+msgstr ""
+
+msgctxt "#31210"
+msgid "Light"
+msgstr ""
+
+msgctxt "#31211"
+msgid "Home"
+msgstr ""
+
+msgctxt "#31212"
+msgid "Timer"
+msgstr ""
+
+msgctxt "#31213"
+msgid "Cancel timer"
+msgstr ""
+
+msgctxt "#31214"
+msgid "Sleep"
+msgstr ""
+
+msgctxt "#31215"
+msgid "Restart"
+msgstr ""
+
+msgctxt "#31216"
+msgid "Power"
+msgstr ""
+
+
+
+msgctxt "#31219"
+msgid "Widgets"
+msgstr ""
+
+msgctxt "#31220"
+msgid "Customise home menu"
+msgstr ""
+
+msgctxt "#31221"
+msgid "Reset home menu shortcuts"
+msgstr ""
+
+msgctxt "#31222"
+msgid "Widget 1 view"
+msgstr ""
+
+msgctxt "#31223"
+msgid "Widget 1 display"
+msgstr ""
+
+msgctxt "#31224"
+msgid "Widget 2 view"
+msgstr ""
+
+msgctxt "#31225"
+msgid "Widget 2 display"
+msgstr ""
+
+msgctxt "#31226"
+msgid "Widget 3 view"
+msgstr ""
+
+msgctxt "#31227"
+msgid "Widget 3 display"
+msgstr ""
+
+msgctxt "#31228"
+msgid "Enable widgets"
+msgstr "
+
+msgctxt "#31229"
+msgid "Enable embedded lists"
+msgstr ""
+
+msgctxt "#31230"
+msgid "Enable embedded music player"
+msgstr ""
+
+msgctxt "#31231"
+msgid "Prefer keyart for poster views"
+msgstr ""
+
+
+
+msgctxt "#31067"
+msgid "Event log"
+msgstr ""
 
 msgctxt "#32000"
 msgid "Ends"
@@ -44,7 +171,7 @@ msgctxt "#32103"
 msgid "Billboard"
 
 msgctxt "#32104"
-msgid "Filmstrip"
+msgid "Strip"
 
 msgctxt "#32105"
 msgid "Size"
@@ -122,8 +249,7 @@ msgid "Disabled"
 msgctxt "#31133"
 msgid "Enable Flags for Billboard views"
 
-msgctxt "#31134"
-msgid "Prefer keyart for poster views"
+
 
 msgctxt "#31135"
 msgid "Enable 'Row Thumb (16:9)' and 'Wall Thumb (16:9)' views"
@@ -243,7 +369,6 @@ msgstr ""
 msgctxt "#31154"
 msgid "Auto-Update On"
 msgstr ""
-
 
 
 
@@ -413,9 +538,7 @@ msgctxt "#31048"
 msgid "Playlist Options"
 msgstr ""
 
-msgctxt "#31049"
-msgid "Customise Home Menu"
-msgstr ""
+
 
 msgctxt "#31051"
 msgid "Settings can be accessed from the Shutdown menu or by rebooting XBMC!"
