--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -107,42 +107,51 @@ msgid "Reset home menu shortcuts"
 msgstr ""
 
 msgctxt "#31222"
-msgid "Widget 1 view"
+msgid "Widget"
 msgstr ""
 
 msgctxt "#31223"
-msgid "Widget 1 display"
+msgid "Content"
 msgstr ""
 
 msgctxt "#31224"
-msgid "Widget 2 view"
+msgid "Layout"
 msgstr ""
 
 msgctxt "#31225"
-msgid "Widget 2 display"
+msgid "Display"
 msgstr ""
 
 msgctxt "#31226"
-msgid "Widget 3 view"
+msgid "In Progress"
 msgstr ""
 
 msgctxt "#31227"
-msgid "Widget 3 display"
+msgid "Next Up"
 msgstr ""
 
 msgctxt "#31228"
+msgid "Latest Movies"
+msgstr ""
+
+msgctxt "#31229"
+msgid "Latest TV Shows"
+msgstr ""
+
+
+msgctxt "#31238"
 msgid "Enable widgets"
 msgstr "
 
-msgctxt "#31229"
+msgctxt "#31239"
 msgid "Enable embedded lists"
 msgstr ""
 
-msgctxt "#31230"
+msgctxt "#31240"
 msgid "Enable embedded music player"
 msgstr ""
 
-msgctxt "#31231"
+msgctxt "#31241"
 msgid "Prefer keyart for poster views"
 msgstr ""
 
