--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -123,20 +123,31 @@ msgid "Display"
 msgstr ""
 
 msgctxt "#31226"
-msgid "In Progress"
+msgid "Continue watching"
 msgstr ""
 
 msgctxt "#31227"
-msgid "Next Up"
+msgid "Next up"
 msgstr ""
 
 msgctxt "#31228"
-msgid "Latest Movies"
+msgid "Latest movies"
 msgstr ""
 
 msgctxt "#31229"
-msgid "Latest TV Shows"
+msgid "Latest TV shows"
 msgstr ""
+
+msgctxt "#31230"
+msgid "Latest albums"
+msgstr ""
+
+msgctxt "#31231"
+msgid "Recently played albums"
+msgstr ""
+
+
+
 
 
 msgctxt "#31238"
