--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -24,46 +24,223 @@ msgctxt "#31200"
 msgid "Copacetic"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
+msgctxt "#31224"
+msgid "Layout"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
 msgctxt "#31201"
 msgid "List"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml
 msgctxt "#31202"
 msgid "Billboard"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml
 msgctxt "#31203"
 msgid "Showcase"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml
 msgctxt "#31204"
 msgid "Strip"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml
 msgctxt "#31205"
 msgid "Grid"
 msgstr ""
 
-#: Viewtypes
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32140"
+msgid "Movies"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32141"
+msgid "Sets"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32142"
+msgid "TV Shows"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32143"
+msgid "Seasons"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32144"
+msgid "Episodes"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32145"
+msgid "Artists"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32146"
+msgid "Albums"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32147"
+msgid "Songs"
+msgstr ""
+
+
+
+#: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
+msgctxt "#31225"
+msgid "Display"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32101"
+msgid "Thumbnails"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32102"
+msgid "Background"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
 msgctxt "#31206"
 msgid "Posters"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
 msgctxt "#31207"
 msgid "Fanart"
 msgstr ""
 
-#: Viewtypes
+#: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
 msgctxt "#31208"
 msgid "Square"
 msgstr ""
 
+
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32109"
+msgid "Details"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32110"
+msgid "All"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32154"
+msgid "Off"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32157"
+msgid "On"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32111"
+msgid "Title"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32150"
+msgid "Title and Info"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32151"
+msgid "Title and Plot"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32152"
+msgid "Title and Bio"
+msgstr ""
+
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32153"
+msgid "Title and Overview"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32155"
+msgid "Side"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32156"
+msgid "Overlay"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32158"
+msgid "Breadcrumb"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32112"
+msgid "Logos"
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
+msgctxt "#32123"
+msgid "Plot"
+msgstr ""
+msgstr ""
+
+#: /16x9/Includes_MyViews.xml
+msgctxt "#32114"
+msgid "Info"
+msgstr ""
+
+msgctxt "#32115"
+msgid "Flags"
+msgstr ""
+
+msgctxt "#32116"
+msgid "Studio"
+msgstr ""
+
+msgctxt "#32117"
+msgid "Age Rating"
+msgstr ""
+
+msgctxt "#32118"
+msgid "Sort"
+msgstr ""
+
+msgctxt "#32119"
+msgid "Order"
+msgstr ""
+
+msgctxt "#32120"
+msgid "Include"
+msgstr ""
+
+msgctxt "#31109"
+msgid "Update Library"
+msgstr ""
+
+msgctxt "#31524"
+msgid "Enabled"
+msgstr ""
+
+msgctxt "#31525"
+msgid "Disabled"
+msgstr ""
 
 
 
@@ -122,13 +299,7 @@ msgctxt "#31223"
 msgid "Content"
 msgstr ""
 
-msgctxt "#31224"
-msgid "Layout"
-msgstr ""
 
-msgctxt "#31225"
-msgid "Display"
-msgstr ""
 
 msgctxt "#31226"
 msgid "Continue watching"
@@ -188,16 +359,6 @@ msgstr ""
 #: /16x9/Variables.xml
 msgctxt "#32001"
 msgid "Watched"
-msgstr ""
-
-#: /16x9/Variables.xml
-msgctxt "#32122"
-msgid "Seasons"
-msgstr ""
-
-#: /16x9/Variables.xml
-msgctxt "#32123"
-msgid "Plot"
 msgstr ""
 
 #: /16x9/Variables.xml
@@ -277,54 +438,7 @@ msgstr ""
 
 
 
-msgctxt "#32100"
-msgid "View"
-msgstr ""
 
-msgctxt "#32109"
-msgid "Details"
-
-msgctxt "#32110"
-msgid "All"
-
-msgctxt "#32111"
-msgid "Title"
-
-msgctxt "#32112"
-msgid "Logos"
-
-msgctxt "#32113"
-msgid "Views"
-
-msgctxt "#32114"
-msgid "Info"
-
-msgctxt "#32115"
-msgid "Flags"
-
-msgctxt "#32116"
-msgid "Studio"
-
-msgctxt "#32117"
-msgid "Age Ratings"
-
-msgctxt "#32118"
-msgid "Sort"
-
-msgctxt "#32119"
-msgid "Order"
-
-msgctxt "#32120"
-msgid "Include"
-
-msgctxt "#31109"
-msgid "Update Library"
-
-msgctxt "#31524"
-msgid "Enabled"
-
-msgctxt "#31525"
-msgid "Disabled"
 
 
 
