--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -338,7 +338,7 @@ msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31242"
-msgid "Disable player progress bar on pause screen"
+msgid "Disable video player progress bar on pause screen"
 msgstr ""
 
 
