--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -49,51 +49,6 @@ msgctxt "#31205"
 msgid "Grid"
 msgstr ""
 
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32140"
-msgid "Movies"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32141"
-msgid "Sets"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32142"
-msgid "TV Shows"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32143"
-msgid "Seasons"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32144"
-msgid "Episodes"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32145"
-msgid "Artists"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32146"
-msgid "Albums"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, /16x9/Variables.xml
-msgctxt "#32147"
-msgid "Songs"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
-msgctxt "#31225"
-msgid "Display"
-msgstr ""
-
 #: /16x9/Includes_MyViews.xml
 msgctxt "#32101"
 msgid "Thumbnails"
@@ -122,21 +77,6 @@ msgstr ""
 #: /16x9/Includes_MyViews.xml
 msgctxt "#32109"
 msgid "Details"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml
-msgctxt "#32110"
-msgid "All"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml
-msgctxt "#32154"
-msgid "Off"
-msgstr ""
-
-#: /16x9/Includes_MyViews.xml
-msgctxt "#32157"
-msgid "On"
 msgstr ""
 
 #: /16x9/Includes_MyViews.xml
@@ -239,8 +179,6 @@ msgstr ""
 msgctxt "#31525"
 msgid "Disabled"
 msgstr ""
-
-
 
 
 #: /16x9/DialogButtonMenu.xml
@@ -488,6 +426,27 @@ msgstr ""
 msgctxt "#31529"
 msgid "Fullscreen"
 msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31560"
+msgid "Playlist"
+msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31561"
+msgid "Rewind"
+msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31562"
+msgid "Forward"
+msgstr ""
+
+#: /16x9/MusicOSD.xml
+msgctxt "#31563"
+msgid "Rating"
+msgstr ""
+
 
 
 
