--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -447,6 +447,11 @@ msgctxt "#31563"
 msgid "Rating"
 msgstr ""
 
+#: /16x9/MusicVisualisation.xml
+msgctxt "#31564"
+msgid "Now playing..."
+msgstr ""
+
 
 
 
