--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -96,12 +96,12 @@ msgstr ""
 
 #: /16x9/Includes_MyViews.xml
 msgctxt "#32152"
-msgid "Title and Bio"
+msgid "Title and Biography"
 msgstr ""
 
 #: /16x9/Includes_MyViews.xml
 msgctxt "#32153"
-msgid "Title and Overview"
+msgid "Title and Review"
 msgstr ""
 
 #: /16x9/Includes_MyViews.xml
