--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -279,6 +279,47 @@ msgctxt "#31242"
 msgid "Disable video player progress bar on pause screen"
 msgstr ""
 
+#: /16x9/SkinSettings.xml
+msgctxt "#31243"
+msgid "Set home screen background opacity"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31244"
+msgid "Hide clock on home screen"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31245"
+msgid "Enable multiart slideshows"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31246"
+msgid "Show unwatched episodes indicator"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31247"
+msgid "Show unwatched instead of watched in details"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31248"
+msgid "50%"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31249"
+msgid "33%"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31250"
+msgid "25%"
+msgstr ""
+
+
 
 
 
