--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -228,20 +228,24 @@ msgstr ""
 
 
 
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31219"
-msgid "Widgets"
-msgstr ""
-
 #: /16x9/SkinSettings.xml
 msgctxt "#31220"
-msgid "Customise home menu"
+msgid "Customise menu shortcuts"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31221"
-msgid "Reset home menu shortcuts"
+msgid "Reset menu shortcuts"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31238"
+msgid "Enable widgets"
+msgstr "
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31219"
+msgid "Widgets"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
@@ -255,9 +259,24 @@ msgid "Content"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31238"
-msgid "Enable widgets"
-msgstr "
+msgctxt "#31258"
+msgid "Override artwork slideshow"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31259"
+msgid "Choose new path..."
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31243"
+msgid "Set artwork brightness"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31244"
+msgid "Hide clock"
+msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31239"
@@ -270,38 +289,18 @@ msgid "Enable embedded music player"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31241"
-msgid "Prefer keyart for poster views"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31242"
-msgid "Disable video player progress bar on pause screen"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31243"
-msgid "Set home screen background opacity"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
-msgctxt "#31244"
-msgid "Hide clock on home screen"
-msgstr ""
-
-#: /16x9/SkinSettings.xml
 msgctxt "#31245"
 msgid "Enable multiart slideshows"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31246"
-msgid "Show unwatched episodes indicator"
+msgctxt "#31251"
+msgid "Choose refresh interval..."
 msgstr ""
 
 #: /16x9/SkinSettings.xml
-msgctxt "#31247"
-msgid "Show unwatched instead of watched in details"
+msgctxt "#31252"
+msgid "Set refresh interval"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
@@ -311,7 +310,7 @@ msgstr ""
 
 #: /16x9/SkinSettings.xml
 msgctxt "#31249"
-msgid "33%"
+msgid "33% (default)"
 msgstr ""
 
 #: /16x9/SkinSettings.xml
@@ -319,7 +318,50 @@ msgctxt "#31250"
 msgid "25%"
 msgstr ""
 
+#: /16x9/SkinSettings.xml
+msgctxt "#31253"
+msgid "3 seconds"
+msgstr ""
 
+#: /16x9/SkinSettings.xml
+msgctxt "#31254"
+msgid "4 seconds (default)"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31255"
+msgid "5 seconds"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31256"
+msgid "7 seconds"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31257"
+msgid "10 seconds"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31241"
+msgid "Prefer keyart for poster views"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31246"
+msgid "Show unwatched episodes count"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31247"
+msgid "Display unwatched episodes info"
+msgstr ""
+
+#: /16x9/SkinSettings.xml
+msgctxt "#31242"
+msgid "Hide progress bar on pause screen"
+msgstr ""
 
 
 
