--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -400,6 +400,11 @@ msgctxt "#31067"
 msgid "Event log"
 msgstr ""
 
+#: /16x9/Includes_Settings.xml
+msgctxt "#31068"
+msgid "Current settings level:"
+msgstr ""
+
 
 
 
