--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -488,6 +488,11 @@ msgctxt "#32138"
 msgid "SD"
 msgstr ""
 
+#: /16x9/Variables.xml
+msgctxt "#32139"
+msgid "HLG"
+msgstr ""
+
 
 
 #: /16x9/Includes_Player.xml
