--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -567,18 +567,18 @@ msgstr ""
 
 
 
-# HITCHER LABELS
+#/16x9/LoginScreen.xml
 msgctxt "#31100"
-msgid "Background colour"
+msgid "Who's watching?"
 
 msgctxt "#31101"
-msgid "Rule field"
+msgid "Good evening!"
 
 msgctxt "#31102"
-msgid "Rule operator"
+msgid "Good afternoon!"
 
 msgctxt "#31103"
-msgid "Rule value"
+msgid "Good morning!"
 
 msgctxt "#31104"
 msgid "Diffuse"
