--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -203,12 +203,7 @@ msgstr ""
 
 #: /16x9/DialogButtonMenu.xml
 msgctxt "#31212"
-msgid "Timer"
-msgstr ""
-
-#: /16x9/DialogButtonMenu.xml
-msgctxt "#31213"
-msgid "Cancel timer"
+msgid "Sign out"
 msgstr ""
 
 #: /16x9/DialogButtonMenu.xml
@@ -542,7 +537,6 @@ msgstr ""
 
 
 
-
 #: /16x9/VideoOSDBookmarks.xml
 msgctxt "#31530"
 msgid "Add"
@@ -560,10 +554,10 @@ msgstr ""
 
 
 
-
-
-
-
+#: /16x9/SettingsCategory.xml
+msgctxt "#31016"
+msgid "Settings level"
+msgstr ""
 
 
 
@@ -571,14 +565,27 @@ msgstr ""
 msgctxt "#31100"
 msgid "Who's watching?"
 
+#/16x9/LoginScreen.xml
 msgctxt "#31101"
 msgid "Good evening!"
 
+#/16x9/LoginScreen.xml
 msgctxt "#31102"
 msgid "Good afternoon!"
 
+#/16x9/LoginScreen.xml
 msgctxt "#31103"
 msgid "Good morning!"
+
+
+
+
+
+
+
+
+
+
 
 msgctxt "#31104"
 msgid "Diffuse"
@@ -744,10 +751,6 @@ msgstr ""
 
 msgctxt "#31015"
 msgid "Live TV"
-msgstr ""
-
-msgctxt "#31016"
-msgid "Settings level"
 msgstr ""
 
 msgctxt "#31017"
