--- a/todo.txt
+++ b/todo.txt
@@ -1,234 +1,201 @@
 
-videodb://tvshows/titles/?xsp=%7B%22rules%22%3A%7B%22and%22%3A%5B%7B%22field%22%3A%22actor%22%2C%22operator%22%3A%22is%22%2C%22value%22%3A%5B%22$INFO[Container(50).ListItem.Label]%22%5D%7D%5D%7D%2C%22type%22%3A%22tvshows%22%7D
-
-videodb://tvshows/titles/?xsp={"rules":{"and":[{"field":"actor","operator":"is","value":["$INFO[Container(50).ListItem.Label]"]}]},"type":"tvshows"}
-
-musicdb://
+Delay content on Load for media windows
+Music_Player_Content_Fade_Animation???
+Constants and one-off animations
 
 
+<!-- Multi fanart background -->
+<include name="MultiFanart">
+	<param name="id">2003</param>
+	<param name="art">fanart</param>
+	<definition>
+		<control type="list" id="2003">
+			<autoscroll time="15000">true</autoscroll>
+			<include>HiddenObject</include>
+			<content>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art])]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]1)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]1))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]2)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]2))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]3)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]3))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]4)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]4))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]5)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]5))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]6)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]6))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]7)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]7))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]8)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]8))</visible>
+				</item>
+				<item>
+					<label></label>
+					<icon>$INFO[ListItem.Art($PARAM[art]9)]</icon>
+					<onclick>noop</onclick>
+					<visible>!String.IsEmpty(ListItem.Art($PARAM[art]9))</visible>
+				</item>
+			</content>
+		</control>
+	</definition>
+</include>
+
+
+
+<!-- No textures -->
+<include name="NoTextures">
+	<texturefocus></texturefocus>
+	<texturenofocus></texturenofocus>
+	<textureup></textureup>
+	<texturedown></texturedown>
+	<textureupfocus></textureupfocus>
+	<texturedownfocus></texturedownfocus>
+	<textureupdisabled></textureupdisabled>
+	<texturedowndisabled></texturedowndisabled>
+	<textureradioonfocus></textureradioonfocus>
+	<textureradioonnofocus></textureradioonnofocus>
+	<textureradioofffocus></textureradioofffocus>
+	<textureradiooffnofocus></textureradiooffnofocus>
+	<radiowidth></radiowidth>
+	<radioheight></radioheight>
+</include>
 
 
 
 
 
-Set info
-Actor info
-Infoscreen widgets
+					<item>
+						<label>$LOCALIZE[14200]</label>
+						<onclick>ReplaceWindow(PlayerSettings)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[14036]</label>
+						<onclick>ReplaceWindow(ServiceSettings)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[13000]</label>
+						<onclick>ReplaceWindow(SystemSettings)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[14204]</label>
+						<onclick>ReplaceWindow(PVRSettings)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[15016]</label>
+						<visible>System.GetBool(gamesgeneral.enable)</visible>
+						<onclick>ReplaceWindow(GameSettings)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[13200]</label>
+						<onclick>ReplaceWindow(Profiles)</onclick>
+					</item>
+					<item>
+						<label>LibreELEC</label>
+						<onclick>RunAddon(service.libreelec.settings)</onclick>
+						<visible>System.AddonIsEnabled(service.libreelec.settings)</visible>
+					</item>
+					<item>
+						<label>$LOCALIZE[10003]</label>
+						<onclick>ReplaceWindow(filemanager)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[24001]</label>
+						<onclick>ReplaceWindow(addonbrowser)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[138]</label>
+						<onclick>ReplaceWindow(systeminfo)</onclick>
+					</item>
+					<item>
+						<label>$LOCALIZE[31067]</label>
+						<onclick>ReplaceWindow(eventlog)</onclick>
+					</item>
+				</content>
+			</include>
 
-skinshortcuts for backgrounds and widgets?
 
-AddonBrowser
-DialogAddonInfo
-DialogAddonSettings
+
+
+buttonsvisible
+Status icons
+Dialoginfos - info line
+
+
+Busy spinner location on Widgets
+Window.Property(xmlfile)
+
+8030/8060 progress???
+8060 Gridview progress remaining episodes colordiffuse
+4501 Order
+sets infowidget order
+progressbar grid alignment
+
+CUSTOM WIDGETS
+
+
+global search
+
+
 DialogFullScreenInfo
-DialogMediaSource
+chapters
 DialogPictureInfo
 DialogTextVieer
 LoginScreen
 MyPics
 MyMusicPlaylistEditor
-MyPrograms
-Pointer
 SettingsProfile
 SettingsScreenCalibration
 SlideShow
-VIdeoOSDBookmarks
-DialogMusicInfo
-DialogVideoInfo
 VideoFullScreen
-DialogSlider
-DialogSubtitles
+PVR
 
-<!-- Controls -->
-<control type="grouplist">
-	<width>360</width>
-	<height>60</height>
-	<itemgap>0</itemgap>
-	<onleft>18</onleft>
-	<onright>10</onright>
-	<onup>Close</onup>
-	<ondown>Close</ondown>
-	<orientation>horizontal</orientation>
 
-	<!-- Play/Pause -->
-	<include condition="Player.PauseEnabled">OSDPlayStopButtons</include>
-	<!-- Stop -->
-	<include condition="!Player.PauseEnabled">OSDStopButton</include>
-	<!-- Skip Back -->
-	<control type="button" id="3">
-		<width>60</width>
-		<height>60</height>
-		<onleft>2</onleft>
-		<onright>4</onright>
-		<texturefocus>old_osd/OSDPrevTrackFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDPrevTrackNF.png</texturenofocus>
-		<onclick>PlayerControl(Previous)</onclick>
-		<visible>!VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Rewind -->
-	<control type="button" id="4">
-		<width>60</width>
-		<height>60</height>
-		<onleft>3</onleft>
-		<onright>5</onright>
-		<texturefocus>old_osd/OSDRewindFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDRewindNF.png</texturenofocus>
-		<onclick>PlayerControl(Rewind)</onclick>
-		<visible>Player.SeekEnabled</visible>
-	</control>
-	<!-- Up -->
-	<control type="button" id="5">
-		<width>60</width>
-		<height>60</height>
-		<onleft>4</onleft>
-		<onright>6</onright>
-		<texturefocus>old_osd/OSDUpFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDUpNF.png</texturenofocus>
-		<onclick>PlayerControl(Next)</onclick>
-		<visible>VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Down -->
-	<control type="button" id="6">
-		<width>60</width>
-		<height>60</height>
-		<onleft>5</onleft>
-		<onright>7</onright>
-		<texturefocus>old_osd/OSDDownFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDDownNF.png</texturenofocus>
-		<onclick>PlayerControl(Next)</onclick>
-		<visible>VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Fast Forward -->
-	<control type="button" id="7">
-		<width>60</width>
-		<height>60</height>
-		<onleft>6</onleft>
-		<onright>8</onright>
-		<texturefocus>old_osd/OSDForwardFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDForwardNF.png</texturenofocus>
-		<onclick>PlayerControl(Forward)</onclick>
-		<visible>Player.SeekEnabled</visible>
-	</control>
-	<!-- Next -->
-	<control type="button" id="8">
-		<width>60</width>
-		<height>60</height>
-		<onleft>7</onleft>
-		<onright>9</onright>
-		<texturefocus>old_osd/OSDNextTrackFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDNextTrackNF.png</texturenofocus>
-		<onclick>PlayerControl(Next)</onclick>
-		<visible>!VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Record -->
-	<control type="togglebutton" id="9">
-		<width>60</width>
-		<height>60</height>
-		<onleft>8</onleft>
-		<onright>10</onright>
-		<texturefocus>old_osd/OSDRecordOffFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDRecordOffNF.png</texturenofocus>
-		<alttexturefocus>old_osd/OSDRecordOnFO.png</alttexturefocus>
-		<alttexturenofocus>old_osd/OSDRecordOnNF.png</alttexturenofocus>
-		<usealttexture>Player.Recording</usealttexture>
-		<onclick>PlayerControl(Record)</onclick>
-		<visible>Player.CanRecord</visible>
-	</control>
 
-</control>
+path tracing on infoscreens
+set order - mcu 3 (thor first in video?)
 
-<!-- Options -->
-<control type="grouplist">
-	<right>0</right>
-	<width>360</width>
-	<height>60</height>
-	<align>right</align>
-	<itemgap>0</itemgap>
-	<onleft>9</onleft>
-	<onright>1</onright>
-	<onup>Close</onup>
-	<ondown>Close</ondown>
-	<orientation>horizontal</orientation>
 
-	<!-- 3D mode -->
-	<control type="button" id="10">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSD3DFO.png</texturefocus>
-		<texturenofocus>old_osd/OSD3DNF.png</texturenofocus>
-		<onclick>StereoMode</onclick>
-		<visible>VideoPlayer.IsStereoscopic</visible>
-	</control>
-	<!-- Video Settings -->
-	<control type="button" id="11">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDVideoFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDVideoNF.png</texturenofocus>
-		<onclick>ActivateWindow(osdvideosettings)</onclick>
-	</control>
-	<!-- Audio Settings -->
-	<control type="button" id="12">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDAudioFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDAudioNF.png</texturenofocus>
-		<onclick>ActivateWindow(osdaudiosettings)</onclick>
-	</control>
-	<!-- Bookmarks -->
-	<control type="button" id="13">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDBookmarksFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDBookmarksNF.png</texturenofocus>
-		<onclick>ActivateWindow(videobookmarks)</onclick>
-		<visible>!VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Subtitles -->
-	<control type="button" id="14">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDSubtitlesFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDSubtitlesNF.png</texturenofocus>
-		<onclick>Close</onclick>
-		<onclick>ActivateWindow(OSDSubtitleSettings)</onclick>
-		<visible>!VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Channels -->
-	<control type="button" id="15">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDChannelFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDChannelNF.png</texturenofocus>
-		<onclick>ActivateWindow(PVROSDChannels)</onclick>
-		<visible>VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Channel EPG -->
-	<control type="button" id="16">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDEPGFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDEPGNF.png</texturenofocus>
-		<onclick>ActivateWindow(PVROSDGuide)</onclick>
-		<visible>VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- Teletext -->
-	<control type="button" id="17">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDTextFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDTextNF.png</texturenofocus>
-		<onclick>ActivateWindow(Teletext)</onclick>
-		<visible>VideoPlayer.Content(LiveTV)</visible>
-	</control>
-	<!-- DVD menu -->
-	<control type="button" id="18">
-		<width>60</width>
-		<height>60</height>
-		<texturefocus>old_osd/OSDDvdFO.png</texturefocus>
-		<texturenofocus>old_osd/OSDDvdNF.png</texturenofocus>
-		<onclick>PlayerControl(ShowVideoMenu)</onclick>
-		<visible>VideoPlayer.HasMenu</visible>
-	</control>
+PROGRESS AND SCROLLBAR COLORS
+VOLUME BACKING COLOR ON LIGHT
+SUBTITLE ICON
 
-</control>
+
+<oninfo> home screen widgets
