--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -181,7 +181,7 @@ msgid "Disabled"
 msgstr ""
 
 
-#: /16x9/DialogButtonMenu.xml
+#: /16x9/SkinSettings.xml
 msgctxt "#31200"
 msgid "Copacetic"
 msgstr ""
@@ -559,6 +559,17 @@ msgctxt "#31016"
 msgid "Settings level"
 msgstr ""
 
+#/16x9/SettingsCategory.xml
+msgctxt "#31104"
+msgid "Click for addon browser"
+
+
+
+#/16x9/FileManager.xml
+msgctxt "#31001"
+msgid "items"
+msgstr ""
+
 
 
 #/16x9/LoginScreen.xml
@@ -585,10 +596,6 @@ msgid "Good morning!"
 
 
 
-
-
-msgctxt "#31104"
-msgid "Diffuse"
 
 msgctxt "#31113"
 msgid "-"
@@ -691,10 +698,6 @@ msgstr ""
 
 msgctxt "#31000"
 msgid "Item"
-msgstr ""
-
-msgctxt "#31001"
-msgid "Items"
 msgstr ""
 
 msgctxt "#31002"
