--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,10 @@
 Delay content on Load for media windows
 Music_Player_Content_Fade_Animation???
 Constants and one-off animations
+list_info_label
+filemanager navigation remove from SimpleListIcon
+includes for settings screen repetition - nested for extra bits?
+DIALOGSTYLE CONTEXTMENU FOR FILEMANAGER
 
 
 <!-- Multi fanart background -->
@@ -102,11 +106,7 @@ Constants and one-off animations
 
 
 
-					<item>
-						<label>$LOCALIZE[14200]</label>
-						<onclick>ReplaceWindow(PlayerSettings)</onclick>
-					</item>
-					<item>
+
 						<label>$LOCALIZE[14036]</label>
 						<onclick>ReplaceWindow(ServiceSettings)</onclick>
 					</item>
