--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,40 @@
+MyMusicPlaylistEditor
+SettingsScreenCalibration
+dialogplayerprocessinfo
+New windows? Color picker etc
 
+
+nested instead of blank includes
+simple listicon?
+dialogconfirm no focus at start
+Info_Label - logic based on fuullscreen info
 Delay content on Load for media windows
 Music_Player_Content_Fade_Animation???
 Constants and one-off animations
-list_info_label
-filemanager navigation remove from SimpleListIcon
 includes for settings screen repetition - nested for extra bits?
-DIALOGSTYLE CONTEXTMENU FOR FILEMANAGER
+player status icons redo
+square
+listview size
+breadcrumb like netflix
+gridview icons > poster to keyart transition
+
+
+PVR
+global search
+CUSTOM WIDGETS
+
+buttonsvisible
+Status icons
+Dialoginfos - info line
+Busy spinner location on Widgets
+Window.Property(xmlfile)
+
+8030/8060 progress???
+8060 Gridview progress remaining episodes colordiffuse
+4501 Order
+sets infowidget order
+progressbar grid alignment
+
 
 
 <!-- Multi fanart background -->
@@ -107,85 +136,8 @@ DIALOGSTYLE CONTEXTMENU FOR FILEMANAGER
 
 
 
-						<label>$LOCALIZE[14036]</label>
-						<onclick>ReplaceWindow(ServiceSettings)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[13000]</label>
-						<onclick>ReplaceWindow(SystemSettings)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[14204]</label>
-						<onclick>ReplaceWindow(PVRSettings)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[15016]</label>
-						<visible>System.GetBool(gamesgeneral.enable)</visible>
-						<onclick>ReplaceWindow(GameSettings)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[13200]</label>
-						<onclick>ReplaceWindow(Profiles)</onclick>
-					</item>
-					<item>
-						<label>LibreELEC</label>
-						<onclick>RunAddon(service.libreelec.settings)</onclick>
-						<visible>System.AddonIsEnabled(service.libreelec.settings)</visible>
-					</item>
-					<item>
-						<label>$LOCALIZE[10003]</label>
-						<onclick>ReplaceWindow(filemanager)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[24001]</label>
-						<onclick>ReplaceWindow(addonbrowser)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[138]</label>
-						<onclick>ReplaceWindow(systeminfo)</onclick>
-					</item>
-					<item>
-						<label>$LOCALIZE[31067]</label>
-						<onclick>ReplaceWindow(eventlog)</onclick>
-					</item>
-				</content>
-			</include>
 
 
-
-
-buttonsvisible
-Status icons
-Dialoginfos - info line
-
-
-Busy spinner location on Widgets
-Window.Property(xmlfile)
-
-8030/8060 progress???
-8060 Gridview progress remaining episodes colordiffuse
-4501 Order
-sets infowidget order
-progressbar grid alignment
-
-CUSTOM WIDGETS
-
-
-global search
-
-
-DialogFullScreenInfo
-chapters
-DialogPictureInfo
-DialogTextVieer
-LoginScreen
-MyPics
-MyMusicPlaylistEditor
-SettingsProfile
-SettingsScreenCalibration
-SlideShow
-VideoFullScreen
-PVR
 
 
 
