--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -590,18 +590,19 @@ msgid "Good morning!"
 
 
 
-
-
-
-
-
-
-
+#/16x9/Includes_Widgets.xml
 msgctxt "#31113"
-msgid "-"
+msgid "More from Season"
 
+#/16x9/Includes_Widgets.xml
 msgctxt "#31114"
-msgid "-"
+msgid "More"
+
+
+
+
+
+
 
 msgctxt "#31115"
 msgid "-"
