--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
-MyMusicPlaylistEditor
+MyMusicPlaylistEditorv - contextmenu
+BUTTONS!!! - Layout (dialogsettings), Shift (skinshortcuts)
+
+
 SettingsScreenCalibration
 dialogplayerprocessinfo
 New windows? Color picker etc
