--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+String.IsEqual(Window(home).Property(HomeWidget),9010) + Skin.HasSetting(Widget1_View_Grid) + !Skin.HasSetting(Widget1_Display_Fanart) + !Skin.HasSetting(Widget1_Display_Square) + !Skin.HasSetting(Widget1_Content_LatestAlbums) + !Skin.HasSetting(Widget1_Content_RecentAlbums)
+Like this or is it better just to have the skin strings? Check includes-settings to see how thet skin settings are setup
+
+
 MyMusicPlaylistEditorv - contextmenu
 BUTTONS!!! - Layout (dialogsettings), Shift (skinshortcuts)
 
