--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -605,10 +605,14 @@ msgid "More"
 
 
 msgctxt "#31115"
-msgid "-"
+msgid "[COLOR copacetic_accent_color]/[/COLOR]"
 
 msgctxt "#31116"
-msgid "-"
+msgid "[B][COLOR copacetic_accent_color]/[/COLOR][/B]"
+
+
+
+
 
 msgctxt "#31117"
 msgid "-"
