--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,14 @@
-String.IsEqual(Window(home).Property(HomeWidget),9010) + Skin.HasSetting(Widget1_View_Grid) + !Skin.HasSetting(Widget1_Display_Fanart) + !Skin.HasSetting(Widget1_Display_Square) + !Skin.HasSetting(Widget1_Content_LatestAlbums) + !Skin.HasSetting(Widget1_Content_RecentAlbums)
-Like this or is it better just to have the skin strings? Check includes-settings to see how thet skin settings are setup
 
-
-MyMusicPlaylistEditorv - contextmenu
-BUTTONS!!! - Layout (dialogsettings), Shift (skinshortcuts)
+smartplaylist editor - delay on load, distribution of columns, color of labels
+dialog mediasource buttons
+scriptupnext buttons
+view menu /s
+BUTTONS!!! - Layout (dialogsettings)
+buttonlayout
+Dialogmediasource x 3,
+breadcrumb bar on smartplaylists list
+Smartplaylist editor
+Smartplaylist rule > dialogselect buttons missing
 
 
 SettingsScreenCalibration
@@ -20,9 +25,7 @@ Music_Player_Content_Fade_Animation???
 Constants and one-off animations
 includes for settings screen repetition - nested for extra bits?
 player status icons redo
-square
 listview size
-breadcrumb like netflix
 gridview icons > poster to keyart transition
 
 
