--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -17,6 +17,22 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 
+#: Generic
+msgctxt "#31115"
+msgid "[COLOR copacetic_accent_color]/[/COLOR]"
+
+#: Generic
+msgctxt "#31116"
+msgid "[B][COLOR copacetic_accent_color]/[/COLOR][/B]"
+
+#: Generic
+msgctxt "#31130"
+msgid "[COLOR copacetic_accent_color]‹[/COLOR]"
+
+#: Generic
+msgctxt "#31131"
+msgid "[COLOR copacetic_accent_color]›[/COLOR]"
+
 
 
 #: /16x9/Includes_MyViews.xml, 16x9/Includes_Settings.xml
@@ -602,35 +618,26 @@ msgid "More"
 
 
 
-
-
-msgctxt "#31115"
-msgid "[COLOR copacetic_accent_color]/[/COLOR]"
-
-msgctxt "#31116"
-msgid "[B][COLOR copacetic_accent_color]/[/COLOR][/B]"
-
-
-
-
-
+#/16x9/SmartPlaylistEditor.xml
 msgctxt "#31117"
-msgid "-"
+msgid "Match"
 
+#/16x9/SmartPlaylistEditor.xml
 msgctxt "#31118"
-msgid "-"
+msgid "Limit"
 
+#/16x9/SmartPlaylistEditor.xml
 msgctxt "#31119"
-msgid "-"
+msgid "Sort"
 
+#/16x9/SmartPlaylistEditor.xml
 msgctxt "#31120"
-msgid "-"
+msgid "Direction"
 
-msgctxt "#31130"
-msgid "Last Aired"
 
-msgctxt "#31131"
-msgid "Aired"
+
+
+
 
 msgctxt "#31136"
 msgid "Airs"
