--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,17 @@
 
-smartplaylist editor - delay on load, distribution of columns, color of labels
-dialog mediasource buttons
-scriptupnext buttons
-view menu /s
-BUTTONS!!! - Layout (dialogsettings)
-buttonlayout
-Dialogmediasource x 3,
-breadcrumb bar on smartplaylists list
-Smartplaylist editor
-Smartplaylist rule > dialogselect buttons missing
+Remove Settings_Scrollbar
+smartplaylistrule focusing on id=14 -> Kodi bug?
+smartplaylist editor - delay on load, distribution of columns
 
 
 SettingsScreenCalibration
+myprograms
 dialogplayerprocessinfo
 New windows? Color picker etc
+PVR
+global search
+CUSTOM WIDGETS
+sort letters
 
 
 nested instead of blank includes
@@ -25,13 +23,9 @@ Music_Player_Content_Fade_Animation???
 Constants and one-off animations
 includes for settings screen repetition - nested for extra bits?
 player status icons redo
-listview size
 gridview icons > poster to keyart transition
 
 
-PVR
-global search
-CUSTOM WIDGETS
 
 buttonsvisible
 Status icons
@@ -161,3 +155,14 @@ SUBTITLE ICON
 
 
 <oninfo> home screen widgets
+
+
+
+
+CHECK
+- icons
+- localisations (sort and renumber)
+- load animations
+- variables / includes (sort and rename)
+- Constants
+- one off animations
