--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,34 @@
+BUGS
+- Focus lost after search > keyboard > cancel - does this happen in estuary?
+- smartplaylistrule focusing on id=14 -> Kodi bug?
+- gridview with settings open > multiart disappears
 
-Remove Settings_Scrollbar
-smartplaylistrule focusing on id=14 -> Kodi bug?
+THINGS TO FIX
+- delay multiart on first load?
+- grid details delay on contentswitching
+- musicplaylisteditor - active list chooses fanart and icon when on buttons#
+- Objects / Songs
+
+MAYBE?
+- Alignment of commondetails with breadcrumb label on Home
+- align buttons with panel?
+- prime studios
+
+
+
+Delayed info on videplayer like netflix - two info bars?
+dialogsubtitles update
+missing bookmark thumbnail
+seekbar pops up briefly after videobookmarks
+secondary list label on listview cropped
+transparent background on musicinfo > play > add-on required (dialogconfirm)
+add playalbum to required
+/ in musicplaying / next label centered vertically?
+
+
 smartplaylist editor - delay on load, distribution of columns
+
+dialogpictureinfo focused color when X selected
 
 
 SettingsScreenCalibration
@@ -166,3 +193,4 @@ CHECK
 - variables / includes (sort and rename)
 - Constants
 - one off animations
+- conditions for scripts e.g. autoplay, embuary helper, autocomplete
