--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -578,14 +578,38 @@ msgstr ""
 #/16x9/SettingsCategory.xml
 msgctxt "#31104"
 msgid "Click for addon browser"
+msgstr ""
 
 
-
-#/16x9/FileManager.xml
+#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml
 msgctxt "#31001"
 msgid "items"
 msgstr ""
 
+#/16x9/FileManager.xml, /16x9/MusicPlaylistEditor.xml
+msgctxt "#31000"
+msgid "item"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31136"
+msgid "No items"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31137"
+msgid "songs"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31138"
+msgid "song"
+msgstr ""
+
+#16x9/MusicPlaylistEditor.xml
+msgctxt "#31139"
+msgid "No songs added"
+msgstr ""
 
 
 #/16x9/LoginScreen.xml
@@ -636,20 +660,19 @@ msgid "Direction"
 
 
 
+#/16x9/DialogVolumeBar.xml
+msgctxt "#31144"
+msgid "Muted"
+msgstr ""
 
 
 
-msgctxt "#31136"
-msgid "Airs"
 
-msgctxt "#31137"
-msgid "watched"
 
-msgctxt "#31138"
-msgid "mins"
 
-msgctxt "#31139"
-msgid "-"
+
+
+
 
 msgctxt "#31140"
 msgid "-"
@@ -660,9 +683,7 @@ msgid "Art"
 msgctxt "#31143"
 msgid "Notify"
 
-msgctxt "#31144"
-msgid "Muted"
-msgstr ""
+
 
 msgctxt "#31145"
 msgid "Border"
@@ -708,9 +729,7 @@ msgstr ""
 
 #Conq labels
 
-msgctxt "#31000"
-msgid "Item"
-msgstr ""
+
 
 msgctxt "#31002"
 msgid "Tag"
