--- a/todo.txt
+++ b/todo.txt
@@ -6,28 +6,23 @@ BUGS
 THINGS TO FIX
 - delay multiart on first load?
 - grid details delay on contentswitching
-- musicplaylisteditor - active list chooses fanart and icon when on buttons#
-- Objects / Songs
 
 MAYBE?
 - Alignment of commondetails with breadcrumb label on Home
 - align buttons with panel?
 - prime studios
-
-
+- musicvisualisation - remove breadcrumb??
+- More variable size labels?
 
 Delayed info on videplayer like netflix - two info bars?
 dialogsubtitles update
 missing bookmark thumbnail
 seekbar pops up briefly after videobookmarks
-secondary list label on listview cropped
 transparent background on musicinfo > play > add-on required (dialogconfirm)
 add playalbum to required
-/ in musicplaying / next label centered vertically?
 
 
 smartplaylist editor - delay on load, distribution of columns
-
 dialogpictureinfo focused color when X selected
 
 
